crud em histprico finalizado!